# analytical-platform-airflow-cadet-deployer

./: .gitignore  .grype.yml  .python-version  .snyk  .trivyignore  Dockerfile  README.md  cadet_deployer.json  pyproject.toml  requirements.txt  sbom.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/workflows/: scan-container.yml  super-linter.yml  unit-tests.yml  unshared-scan-container.yml
src/: check_run_results.py  clone-create-a-derived-table.sh  create-a-derived-table.sh  dag_triggers.yaml  date-checker.sh  entrypoint.sh
tests/: test_check_run_results.py  test_shell_scripts.py
