[project]
name = "analytical-platform-airflow-cadet-deployer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "boto3>=1.42.94",
]

[tool.codespell]
skip = "uv.lock"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "boto3-stubs>=1.43.17",
    "codespell>=2.4.2",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pylint>=4.0.5",
]
